<resources>
<!--    <string name="app_name">Autobuses de Jerez</string>-->

    <string name="permission_denied">Permiso denegado</string>
    <string name="permission_needed">Se necesita permiso</string>
    <string name="location_permission_message">Hace falta aceptar el permiso a la ubicación para que puedas localizarte en el mapa</string>
    <string name="where_to_go">Encuentra tu destino</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Abrir menú lateral</string>
    <string name="navigation_drawer_close">Cerrar menú lateral</string>
    <string name="bus_lines">Líneas de autobus</string>
    <string name="line_info_format">%s: %s</string>
    <string name="more_timetable">Más horarios</string>
    <string name="timetable">Horarios</string>
    <string name="error_code_bus_stop">Error. No existe código de parada</string>

    <string name="line_id_bus_stop_format">Línea %d. Parada: %s</string>

    <string name="info_timetable_format">Línea %s - %s\nDía: %s\nHora actual: %s</string>
    <string name="see_timetable">Ver horarios</string>

    <string name="sunday">Domingo</string>
    <string name="laboral">Laborable</string>
    <string name="saturday">Sábado</string>
    <string name="festive">Festivo</string>
    <string name="bus_stop_direction_transfer_format">Sentido: %s</string>
    <string name="bus_stop_transfer_format">Transbordos: %s</string>
    <string name="favourite_bus_stop_format">Línea %d - %s</string>
    <string name="favourites">Favoritos</string>
    <string name="favourite_bus_stops">Paradas favoritas</string>
    <string name="about_app">Sobre la aplicación</string>
    <string name="news">Noticias</string>
    <string name="app_info">Información de la app</string>
    <string name="contact">Contactar</string>
    <string name="contact_email_subject">Contacto desde la app Autobuses Jerez</string>
    <string name="send_email">Enviar email</string>
    <string name="moved">(trasladado)</string>
    <string name="version_format">Versión %s</string>
    <string name="urban_buses">Autobuses urbanos</string>
    <string name="application">Aplicación</string>
    <string name="free_software">Software libre</string>
    <string name="developer">Desarrolladores</string>
    <string name="info">Información</string>
    <string name="share">Compartir</string>
    <string name="share_app">¡Comparte esta aplicación!</string>
    <string name="share_text">Nueva app: Autobuses de Jerez.\n\nCon ella podrás ver fácilmente qué linea y parada tienes que coger para llegar a tu destino y ver los horarios.\n\nDescargala gratuitamente en Google Play:\nhttps://play.google.com/store/apps/details?id=com.triskelapps.busjerez</string>
    <string name="empty_fav_list">Todavía no tienes paradas favoritas. Para añadirlas, selecciona tu línea y parada habitual en la pantalla anterior y pulsa el icono de la estrella.</string>
    <string name="error_loading_timetable">Error al cargar los horarios. Prueba otra vez pasados unos segundos.</string>
    <string name="version_updates">Novedades de esta versión:</string>
    <string name="ok">OK</string>
    <string name="share_app_reminder_text">Si te está resultando útil esta app puedes compartirla con tus contactos, grupos o redes sociales y así ayudar a más gente a moverse mejor con los autobuses de Jerez ;)</string>
    <string name="later">Mas tarde</string>
    <string name="dont_show_again">No volver a mostrar</string>
    <string name="welcome">¡Bienvenid@!</string>
    <string name="welcome_text">Gracias por descargar la app %s. Con ella tendras a mano lo que necesitas para moverte mejor por la ciudad:\n
\n- Mapa interactivo
\n- Líneas y paradas
\n- Horarios según tipo de día (laborable, sábado, domingo/festivo)
\n- Buscador de lugares
\n- Guarda paradas como favoritas para acceder a los horarios directamente
\n- Sección de noticias y avisos\n\nPuedes ver un vídeo de demostración pulsando el botón inferior.</string>
    <string name="watch_video">Ver video</string>
    <string name="updating_data">Actualizando datos...</string>
    <string name="next_arrivals">Próximas llegadas</string>
    <string name="minutes_x">%d min</string>
    <string name="seconds_x">%d segundos</string>
    <string name="site_name">Sitio</string>


    <string name="no_link_copied">No hay un enlace copiado en el portapapeles</string>
    <string name="invalid_link_copied">El enlace copiado no es válido</string>
    <string name="receiving_news_data">Recibiendo datos de noticia...</string>
    <string name="is_ok">¿Está bien?</string>
    <string name="yes_upload_news">¡Si! - Subir noticia</string>
    <string name="date">Fecha</string>
    <string name="sending">Enviando...</string>
    <string name="news_sent_success">Envío de noticia correcto</string>
    <string name="send">Enviar</string>
    <string name="not_available">No disponible</string>
    <string name="location_disabled">Tu ubicación está desactivada</string>
    <string name="activate">Activar</string>
    <string name="allow_location">Permitir acceso a ubicación</string>
    <string name="allow">Permitir</string>
    <string name="allow_location_message">Para mostrar tu ubicación en el mapa es necesario activar el permiso de localización del teléfono.\n\nPara activarlo pulsa el botón \"Permitir\" y en la siguiente pantalla pulsa \"Permisos\"</string>

    <string name="notifications_permission_rationale_msg">A partir de la versión 13 de Android, el usuario tiene la opción de elegir qué notificaciones quiere recibir. Acepta el permiso si quieres que te lleguen avisos para estar al día.</string>
    <string name="notifications_permission">Permiso de notificaciones</string>
    <string name="notifications_permission_denied">Has desactivado las notificaciones</string>
    <string name="notifications_permission_granted">¡Notificaciones activadas!</string>
    <string name="nearby_lines">Líneas\ncercanas</string>
    <string name="invalid_link">El enlace no es válido</string>
    <string name="no_app_to_open_link">No existe aplicación para abrir este enlace</string>
    <string name="activate_all">Activar todas</string>
    <string name="deactivate_all">Desactivar todas</string>
    <string name="no_results_found">No se encontraron resultados</string>
    <string name="error_search">Error al buscar: %s</string>
    <string name="results">Resultados</string>
    <string name="clear_search">Borrar búsqueda</string>
    <string name="search">Realizar búsqueda</string>
</resources>
