<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/urban_buses">
        <menu>
            <item
                android:id="@+id/nav_news"
                android:icon="@mipmap/ic_news"
                android:title="@string/news" />

            <item
                android:id="@+id/nav_buses_contact"
                android:icon="@drawable/ic_contact_phone"
                android:title="@string/contact" />

        </menu>
    </item>

    <item android:title="@string/application">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_info_app"
                android:title="@string/info" />

            <item
                android:id="@+id/nav_developer"
                android:icon="@mipmap/ic_developer"
                android:title="@string/developer" />

            <item
                android:id="@+id/nav_free_software"
                android:icon="@mipmap/ic_gnu"
                android:title="@string/free_software" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
        </menu>
    </item>
</menu>