<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="4dp">

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/where_to_go"
        android:inputType="textCapSentences"
        android:imeOptions="actionSearch"
        android:padding="12dp" />

    <ImageView
        android:id="@+id/ic_clear_search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_close"
        app:tint="@color/black"
        android:contentDescription="@string/clear_search"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/searchButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:src="@drawable/ic_search"
        android:contentDescription="@string/search"
        app:tint="@color/white" />

</LinearLayout>